fix foldertree being cutoff

--- a/src/components/HeaderBar/stylesheet.css
+++ b/src/components/HeaderBar/stylesheet.css
@@ -43,11 +43,6 @@
 
 .header-bar__back-button {
   color: var(--base01);
-  text-decoration: none;
-
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
 }
 
 .header-bar__back-button__directory-path {
